Adicionado Swagger e Validator
